[gd_scene load_steps=6 format=3 uid="uid://8cgudfaa6ahe"]

[ext_resource type="Theme" uid="uid://ltg03tu30kkp" path="res://UI.tres" id="1_vrqct"]
[ext_resource type="Script" uid="uid://cly61kpc54fse" path="res://Inventory/enchant_screen.gd" id="2_7uk1h"]
[ext_resource type="PackedScene" uid="uid://cc0nc0ocyiqin" path="res://Inventory/inv_slot.tscn" id="2_wiyhf"]
[ext_resource type="Script" uid="uid://ceiusvsj6txjt" path="res://Glyphs/Base Glyph/base_glyph.gd" id="3_ny7wk"]
[ext_resource type="Resource" uid="uid://04asvxsfqoaj" path="res://Glyphs/Lifesteal Glyph/lifesteal_glyph.tres" id="4_cx1yk"]

[node name="enchantScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrqct")
script = ExtResource("2_7uk1h")
ALL_GLYPHS = Array[ExtResource("3_ny7wk")]([ExtResource("4_cx1yk")])

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrqct")
color = Color(0, 0, 0, 0.75)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrqct")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_vrqct")
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_vrqct")
alignment = 1

[node name="sapcer1" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_vrqct")

[node name="slot1" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
theme = ExtResource("1_vrqct")

[node name="wslot" parent="MarginContainer/HBoxContainer/VBoxContainer/slot1" instance=ExtResource("2_wiyhf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrqct")

[node name="wname" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_vrqct")
text = "Weapon Name"
fit_content = true
horizontal_alignment = 1

[node name="sapcer2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_vrqct")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vrqct")
theme_override_font_sizes/normal_font_size = 24
text = "Current Glyphs"
fit_content = true
horizontal_alignment = 1

[node name="currEnchants" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_vrqct")

[node name="sapcer3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_vrqct")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_vrqct")

[node name="glyphs" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_vrqct")
columns = 3

[node name="glyphDesc" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_vrqct")
text = "Glyph description"
fit_content = true
horizontal_alignment = 1

[node name="applyGlyph" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_vrqct")
theme_override_font_sizes/normal_font_size = 24
text = "(A) Apply glyph"
fit_content = true
horizontal_alignment = 1
